--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "prefer-stable": true,
   "require": {
     "movingimage/data-provider": "^1.0.0",
-    "movingimage/vm6-api-client": "~0.1.0"
+    "movingimage/vm6-api-client": "^0.2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.5 || ^5.0"
