--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "movingimage/data-provider": "dev-master",
+    "movingimage/data-provider": "^1.5.0",
     "movingimage/vm6-api-client": "dev-master"
   },
   "require-dev": {
