--- a/composer.json
+++ b/composer.json
@@ -9,19 +9,10 @@
       "email": "robert.szeker@movingimage.com"
     }
   ],
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "http://packagist.mi24.tv/"
-    }
-  ],
-  "config": {
-    "secure-http": false
-  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "movingimage/data-provider": "dev-master",
+    "movingimage/data-provider": "^1.5.0",
     "movingimage/vm6-api-client": "dev-master"
   },
   "require-dev": {
