--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "movingimage/data-provider": "dev-master",
-    "movingimage/vm6-api-client": "dev-master"
+    "movingimage/data-provider": "^1.5.0",
+    "movingimage/vm6-api-client": "^1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.5 || ^5.0"
